# 42-A-Maze-Ing

./: .gitignore  Makefile  README.md  config.txt  evaluation.md  maze.txt  output_validator.py  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: 01bffc09-a850-4b7d-8ae8-0d94e16dd893.json  15945ac6-4d21-48c6-9f8d-4f9c21e9ca00.json  3093daa5-3673-486d-be0b-102487f27d12.json  64841c1b-af1d-4987-ac68-88d9a50cf9ec.json  99834857-fdb6-47f7-ba93-4baa82cf31c3.json  a75cef2b-91c6-429b-8848-31441d419020.json  ac85124a-d1ce-4a6d-b7ee-44a0b4f7e612.json  b079fed2-426b-4746-b65c-71383cb39605.json  e60eb942-3d72-4327-9ed2-f313145a2d48.json
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
mazegen_pkg/: README.md  pyproject.toml
mazegen_pkg/mazegen/: __init__.py
mlx_CLXV/: Makefile
src/: a_maze_ing.py  config.txt
src/algorithms/: AI-generate.py  __init__.py  a-star.py  maze.py  maze1.py  solve.py
src/rendering/: __init__.py  console.py  maze.txt  mlx.py  parse.py
src/rendering/mazes/: AI_1.txt  AI_2.txt  AI_3.txt  AI_4.txt  AI_5.txt  AI_6.txt  AI_7.txt
submission/: .gitignore  Makefile  README.md  a_maze_ing.py  pyproject.toml
submission/algorithms/: __init__.py  maze.py
submission/rendering/: colors.py  parser.py
