[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator using DFS recursive backtracker"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.hatch.build.targets.wheel]
packages = ["mazegen"]
